--- a/style.css
+++ b/style.css
@@ -723,7 +723,10 @@ a {
 .social {
     max-width: 400px;
     margin: auto auto auto auto;
-    color: white;
+}
+
+.social-color {
+    color: #f5f5f5;
 }
 
 h2 {
@@ -822,6 +825,10 @@ h4 {
     color: #FFFFFF!important;
 }
 
+.col-sm-6-p {
+    color: black;
+}
+
 .ltc-white {
     color: #FFFFFF!important;
 }
@@ -838,6 +845,10 @@ h4 {
     color: #c27956!important;
 }
 
+.ltc-atomic-contact {
+    color: #42a6a9 !important;
+}
+  
 .icon-dark-slate-blue {
     color: #364577!important;
     border-color: #364577!important;
