--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body {
 }
 
 #contact-info {
-    color: black;
     font-size: 18px;
     position: relative;
     left: 100px;
@@ -80,6 +79,34 @@ a:hover {
     padding: 20px 50px;
 }
 
+.col-sm-4 h4 {
+    font-size: 18px;
+    color: #35927a;
+}
+.col-sm-4 ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.col-sm-4 ul li a {
+    color: #fff;
+    line-height: 1.8;
+    font-size: 16px;
+}
+
+.col-sm-4 ul li a:hover {
+    color: #cccccc;
+}
+
+@media (max-width: 767px) {
+    .col-sm-4 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+    }
+}
+
 .bg-center,
 .bg-l-edge,
 .bg-r-edge,
@@ -114,8 +141,8 @@ a:hover {
     right: 0;
 }
 
+/*removed the backround image to give it a better view*/
 .texture-paper::before {
-    background: url("img/texture-paper.png");
     background-size: 280px 280px;
 }
 
@@ -682,11 +709,11 @@ a {
 }
 
 .hero-bloc-text {
-    font-size: 38px;
+    font-size: 52px;
 }
 
 .hero-bloc-text-sub {
-    font-size: 36px;
+    font-size: 42px;
 }
 
 .statement-bloc-text {
@@ -699,9 +726,9 @@ a {
     margin: auto auto auto auto;
 }
 
-
+/*increased the size of width*/
 .tight-width-whitespace {
-    max-width: 600px;
+    max-width: 1000px;
     margin: auto auto auto auto;
     color: white;
 }
@@ -750,10 +777,6 @@ h3 {
 
 h1 {
     color: white;
-}
-
-h4 {
-    color: #333333!important;
 }
 
 .quote {
@@ -855,7 +878,7 @@ h4 {
 }
 
 .bg-dots-bg {
-    background-image: url("img/dots-bg.png");
+    background-image: url("./img/dots-bg.png");
 }
 
 .bg-lines-h2-bg {
