--- a/style.css
+++ b/style.css
@@ -559,6 +559,7 @@ button {
 .form-control {
     border-color: rgba(0, 0, 0, .1);
     box-shadow: none;
+    border: 1px solid #7e5909;
 }
 
 .scrollToTop {
@@ -743,8 +744,9 @@ a {
     color: #FFFFFF!important;
     text-transform: uppercase;
     padding: 12px 28px 12px 28px;
-    font-size: 1.0em;
-    font-weight: 700;
+    font-size: 1.2em;
+    font-weight: 800;
+    letter-spacing: 1px;
 }
 
 .social {
